feat(dto): add purchase dtos

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "food-ledger-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "pnpm": "^10.26.2"
   },
